@@ -84,6 +84,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 2143) Update Vietnamese interface
 * Add 'reupload' and 'reupload-shared' permission keys to restrict new uploads
   overwriting existing files; default is the old behavior (allowed).
+* Use strval() to make sure we don't accidentally get null on bad revision
+  text loads or other fields mucking up XML export output
 
 
 === Caveats ===
